--- a/psf-includes/psf-main.css
+++ b/psf-includes/psf-main.css
@@ -23,6 +23,7 @@ ul.psf-last-updated-posts li a:hover {
 }
 
 /* Style for the PSF Trending Posts */
+/* Style for the PSF Trending Posts */
 ul.psf-trending-posts {
     list-style: none;
     padding: 0;
@@ -30,18 +31,26 @@ ul.psf-trending-posts {
 
 ul.psf-trending-posts li {
     margin-bottom: 10px;
+    padding: 10px;
 }
 
 ul.psf-trending-posts li a {
     display: block;
-    padding: 5px 10px;
-    border: 1px solid var(--tl-main);
-    background-color: #f5f5f5;
     text-decoration: none;
-    color: #333;
     transition: background-color 0.2s ease;
 }
 
+/* Custom dynamic styles based on the blog's main color */
+ul.psf-trending-posts li {
+    border: 1px solid var(--tl-main);
+    background-color: #F7F7F8;
+}
+
+ul.psf-trending-posts li a {
+    color: var(--tl-main);
+}
+
 ul.psf-trending-posts li a:hover {
-    background-color: #e5e5e5;
+    background-color: var(--tl-main);
+    color: #FFF; /* Hover font color (white in this example) */
 }
